nextcloud/nginx-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx-service
spec:
    clusterIP: 10.109.238.1
    type: NodePort
    selector:
        app: nginx-ingress
    ports:
    -   name: nginx-ingress-port
        targetPort: 80
        port: 80
        nodePort: 30080
